--- a/eazeWork/src/main/res/values/strings.xml
+++ b/eazeWork/src/main/res/values/strings.xml
@@ -170,6 +170,8 @@
     <string name="emp_name">Emp Name</string>
     <string name="search_hint">Enter user name</string>
     <string name="no_record">No Data Found</string>
+    <string name="network_error">No internet connection. Please try again later</string>
+    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
