--- a/eazeWork/src/main/res/values/strings.xml
+++ b/eazeWork/src/main/res/values/strings.xml
@@ -219,8 +219,10 @@
     <string name="time">Time</string>
     <string name="or">OR</string>
     <string name="continue_with_google">Continue with Google</string>
+    <string name="advance_adjust_error">No more pending advances to adjust</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
 
 </resources>
