--- a/eazeWork/src/main/res/values/strings.xml
+++ b/eazeWork/src/main/res/values/strings.xml
@@ -262,10 +262,7 @@
     <string name="enter_out_time">Please Enter Out Time</string>
     <string name="enter_mail">Please enter your email id</string>
     <string name="select_user">Please select employee </string>
-    <string name="mail_label">Enter Email-Id</string>
-
-
-
+    <string name="mail_label">To recover your url / username / password please enter your email id. We will email your credentials.</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
